--- a/index.html
+++ b/index.html
@@ -130,16 +130,18 @@ Now you&#39;re furious.] (click-append: &quot;Now you&#39;re furious.&quot;) [ Y
 &quot;It was the pot,&quot; he pleads, by way of explanation.] (click-append: &quot;explanation.&quot;) [ But you know it was the ice that triggered his psychosis.] (click-append: &quot;the ice&quot;) [ and his insane jealousy] 
 
 
-The phone is still ringing. You&#39;re afraid that Jade is bearing the brunt of X&#39;s continuing psychosis while you&#39;re at work. You&#39;d better [[call X]]. </tw-passagedata><tw-passagedata pid="5" name="campaign of terror" tags="" position="1042,426" size="100,100">He will drag you through the family court system for an entire year. You will have a designated court outfit that haunts your closet and emerges on days that make you (t8n: &quot;rumble&quot;)[tremble and shake]. How hard it is to smile in your skirt suit.
+The phone is still ringing. You&#39;re afraid that Jade is bearing the brunt of X&#39;s continuing psychosis while you&#39;re at work. You&#39;d better [[call X]]. </tw-passagedata><tw-passagedata pid="5" name="campaign of terror" tags="" position="1042,426" size="100,100">He will drag you through the family court system for an entire year. (click-append: &quot;for an entire year.&quot;) [You will have a designated court outfit that haunts your closet and emerges on days that make you (t8n: &quot;rumble&quot;)[tremble and shake].] (click-append: &quot;tremble and shake.&quot;) [
+
+How hard it is to smile in your skirt suit. (stop:)
 
 &lt;img src=&quot;img/court1.png&quot; alt=&quot;dressed to go to court&quot; /&gt;
 
-&lt;img src=&quot;img/court2.png&quot; alt=&quot;dressed to go to court&quot; /&gt;
+&lt;img src=&quot;img/court2.png&quot; alt=&quot;dressed to go to court&quot; /&gt;]
 
-You will know all along that his goal is not shared custody. (click-replace: &quot;not shared custody&quot;) [maximising your distress and suffering] 
+You will know all along that his goal is not shared custody. (click-replace: &quot;not shared custody&quot;) [maximising your distress and suffering] (click-append: &quot;suffering.&quot;) [
 
 
-But the judge will not believe you because you&#39;ve lived such a quote-unquote (t8n: &quot;rumble&quot;) [colourful lifestyle]. He disregards your sworn statements of domestic violence and it seems that nothing you do or say will matter (click-append: &quot;nothing you do or say will matter&quot;) [ until the man with hands dancing in and out of pockets says to the man with privilege as white as his wig, &#39;&#39;Maybe I don&#39;t want to be a father&#39;&#39;.]
+But the judge will not believe you because you&#39;ve lived such a quote-unquote (t8n: &quot;rumble&quot;) [colourful lifestyle].] (click-append: &quot;colourful lifestyle.&quot;) [ He&#39;ll disregard your sworn statements of domestic violence and it will seem that nothing you do or say will matter.] (click-append: &quot;nothing you do or say will matter&quot;) [ until the man with hands dancing in and out of pockets says to the man with privilege as white as his wig, &quot;Maybe I don&#39;t want to be a father&quot;]
 
 
 Words etched in your neuropathways.
@@ -260,58 +262,72 @@ You wish the cops would arrest him.] (click-append: &quot;arrest him&quot;) [ ev
 You must&#39;ve been blinded.] (click-append: &quot;blinded&quot;) [ by love, by sex pheromones, by drugs] (click-append: &quot;by drugs.&quot;) [
 
 
-The next day you insist that X see his doctor.] (click-append: &quot;see his doctor&quot;) [, who doubles his anti-psychotic medication] (click-append: &quot;anti-psychotic medication&quot;) [
+The next day you insist that X see his doctor.] (click-append: &quot;see his doctor&quot;) [, who doubles his anti-psychotic medication] (click-append: &quot;anti-psychotic medication.&quot;) [
 
-You&#39;re hopeful that life will stabilise now.] (click-append: &quot;life will stabilise now.&quot;) [And it does. [[For two weeks.]]]</tw-passagedata><tw-passagedata pid="11" name="For two weeks." tags="" position="402,615" size="100,100">Nearly two weeks after the suspicious flat tire, you notice X driving past your apartment multiple times each day. Although he&#39;s working across town, he pops in unexpectedly, supposedly for a can of Coke. It would almost be funny, how winded he is after clearly racing up four flights of stairs, throwing open the front door without so much as a hello. (click-replace: &quot;hello&quot;) [text] (click-replace: &quot;text&quot;) [knock]  
-
-
-Except that it&#39;s not funny because he&#39;s looking in every room for a stowaway. (click-replace: &quot;a stowaway&quot;) [an imaginary lover] (click-replace: &quot;an imaginary lover&quot;) [an invisible cuckhold]
+You&#39;re hopeful that life will stabilise now.] (click-append: &quot;life will stabilise now.&quot;) [And it does. [[For two weeks.]]]</tw-passagedata><tw-passagedata pid="11" name="For two weeks." tags="" position="402,615" size="100,100">Nearly two weeks after the suspicious flat tire, you notice X driving past your apartment multiple times each day. (click-append: &quot;multiple times each day.&quot;) [ Although he&#39;s working across town, he pops in unexpectedly, supposedly for an iPad.] (click-replace: &quot;an iPad&quot;) [a phone charger] (click-replace: &quot;phone charger&quot;) [can of Coke] (click-append: &quot;a can of Coke.&quot;) [ It would almost be funny, how winded he is.] (click-append: &quot;how winded he is&quot;) [ after clearly racing up the four flights of stairs] (click-append: &quot;racing up the four flights of stairs&quot;) [, throwing open the front door without so much as a hello] (click-replace: &quot;hello&quot;) [text] (click-replace: &quot;text&quot;) [knock]  (click-append: &quot;without so much as a knock.&quot;) [
 
 
-And there is none to be found because there is no one else and there never was.
+Except that it&#39;s not funny because he&#39;s looking in every room for a stowaway.] (click-replace: &quot;a stowaway&quot;) [an imaginary lover] (click-replace: &quot;an imaginary lover&quot;) [an invisible cuckhold](click-append: &quot;an invisible cuckhold.&quot;) [
+
+
+And there is none to be found because there is no one else.] (click-append: &quot;there is no one else&quot;) [ and there never was]
+
 
 &lt;img src=&quot;img/comp.png&quot; alt=&quot;girl using computer on bed&quot; /&gt;
 
-He leaves without a Coke because there was not a Coke in the fridge and it was never about refreshments anyway.
+
+He leaves without a Coke. (click-append: &quot;without a Coke&quot;) [ because there was not a Coke in the fridge] (click-append: &quot;a Coke in the fridge&quot;) [ and it was never about refreshments anyway] (click-append: &quot;it was never about refreshments anyway.&quot;) [ 
 
 
-He&#39;s doubled his antipsychotic meds on his own accord, not under doctor&#39;s supervision. 
+He&#39;s doubled his antipsychotic meds on his own accord.] (click-append: &quot;on his own accord&quot;) [, not under doctor&#39;s supervision] (click-append: &quot;under doctor&#39;s supervision.&quot;) [ 
 
 
-[[Peacetime is over.]]
+[[Peacetime is over.]]]
 
 &lt;img src=&quot;img/boxing.png&quot; alt=&quot;girl with punching bag&quot; /&gt;</tw-passagedata><tw-passagedata pid="12" name="Peacetime is over." tags="" position="539,615" size="100,100">All you want to do is get through each day, one day at a time, each day getting closer to your goals.
 
 &lt;img src=&quot;img/shop.png&quot; alt=&quot;secret shop&quot; /&gt;
 
-You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [and their friends] (click-replace: &quot;friends&quot;) [kids] to come over to shop any time of day / night. First, you&#39;ll pay your debts, then you&#39;ll buy yourself options. (click-replace: &quot;options&quot;) [freedom] When girls come over, you make X leave because he scares them. (click-replace: &quot;scares&quot;) [says innappropriate things to]
+You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [ and their friends] (click-replace: &quot;their friends&quot;) [their kids] to come over to shop any time of night. (click-replace: &quot;night&quot;) [day] (click-append: &quot;any time of day.&quot;) [ 
 
 
-You are all objects to him.
+First, you&#39;ll pay your debts, then you&#39;ll buy yourself options.] (click-replace: &quot;options&quot;) [freedom] (click-append: &quot;buy yourself freedom.&quot;) [
 
 
-You&#39;re working yourself to exhaustion but work is a pleasure compared to spending time with X. You visit his therapist with him often, and each time he admits to wrongdoing and promises to make enduring changes, but the promises are as lasting as the cigarettes he smokes. 
+When girls come over, you ask X to leave because he scares them.] (click-replace: &quot;scares&quot;) [directs comments laden with sexual innuendo at] (click-append: &quot;sexual innuendo at them.&quot;) [
 
 
-He accuses you of having an affair and of being on drugs. He says that you never even loved him, that you were only ever using him for a visa. (click-append: &quot;using him for a visa.&quot;) [ His logic implies that you had sex with him hundreds of times (click-append: &quot;times&quot;) [, sometimes three or four times a day,] (click-append: &quot;a day,&quot;) [ submitting to all of his perversions] (click-append: &quot;perversions&quot;) [ (urination, anal, choking, bondage)]  to trick him into wanting to marry you.]
+You are all objects to him.] (click-append: &quot;You are all objects to him.&quot;) [
 
 
-You made sacrifices. (click-append: &quot;sacrifices.&quot;) [ You even threw away your vibrators because he so envied the pleasure you took from them and the orgasms that he could not give you.]
+You&#39;re working yourself to exhaustion but work is a pleasure compared to spending time with X.] (click-append: &quot;spending time with X.&quot;) [ You visit his therapist with him often.] (click-replace: &quot;often&quot;) [five times] (click-append: &quot;five times&quot;) [, and each time he admits to wrongdoing and promises to make enduring changes] (click-append: &quot;enduring changes&quot;) [, but the promises are as lasting as his cigarettes] (click-append: &quot;cigarettes.&quot;) [ 
 
 
-What a fucking idiot. (click-append: &quot;What a fucking idiot.&quot;) [ No woman would debase herself so completely or so painfully or so often if not for love.] (click-append: &quot;for love&quot;) [ or money] (click-append: &quot;or money&quot;) [, of which he had none] (click-append: &quot;he had none&quot;) [. If sex is a bargaining chip then we are all tricksters and harlots]
+He accuses you of having an affair.] (click-append: &quot;of having an affair&quot;) [ and of being on drugs] (click-append: &quot;of being on drugs.&quot;) [ He says that you never even loved him, that you were only ever using him for a visa.] (click-append: &quot;using him for a visa.&quot;) [ His logic implies that you had sex with him hundreds of times (click-append: &quot;hundreds of times&quot;) [, sometimes three or four times a day,] (click-append: &quot;times a day,&quot;) [ submitting to all of his perversions] (click-replace: &quot;all of his perversions&quot;) [urination] (click-replace: &quot;urination&quot;) [anal] (click-replace: &quot;anal&quot;) [choking] (click-replace: &quot;choking&quot;) [bondage] to trick him into marrying you.] (click-append: &quot;marrying you.&quot;) [ 
 
 
-Mirror mirror on the wall. (click-append: &quot;Mirror mirror on the wall.&quot;) [ You later learn that he was the one cheating, flying high as he was on ice.]
+You made sacrifices.] (click-append: &quot;sacrifices.&quot;) [ You gave up friendships to please him.] (click-append: &quot;to please him.&quot;) [ You even threw away your vibrators because he so envied the pleasure they gave you.] (click-replace: &quot;the pleasure they gave you&quot;) [ the orgasms that he could not give you] (click-append: &quot;could not give you.&quot;) [ As if your pleasure belonged to him only.] (click-append: &quot;As if your pleasure belonged to him only.&quot;) [
 
 
-He once told you... (click-append: &quot;He once told you...&quot;) [ that his ultimate fantasy was to cage you in a room where you would remain 24 hours a day under video surveillance as his sex slave.]
+No woman would debase herself so completely (click-replace: &quot;so completely&quot;) [so painfully] (click-replace: &quot;so painfully&quot;) [so often] if not for love.] (click-append: &quot;for love&quot;) [ or money] (click-append: &quot;or money&quot;) [, of which he had none] (click-append: &quot;he had none.&quot;) [ 
 
 
-It sounded an awful lot like jail. (click-append: &quot;jail&quot;) [, which is something he would know about, having spend 18 months inside]
+So if sex is a bargaining chip, we are all tricksters and harlots.] (click-append: &quot;tricksters and harlots.&quot;) [
 
 
-But getting back to the [[chickenwire]]...
+Mirror mirror on the wall.] (click-append: &quot;Mirror mirror on the wall.&quot;) [ 
+
+
+You later learn that he was the one cheating, flying high as he was on ice.] (click-append: &quot;he was on ice.&quot;) [
+
+
+He once told you that his ultimate fantasy was to cage you in a room where you would remain 24 hours a day under video surveillance as his sex slave.] (click-append: &quot;his sex slave.&quot;) [
+
+
+It sounded an awful lot like jail.] (click-append: &quot;jail&quot;) [, which is something he would know about, having spend 18 months inside] (click-append: &quot;18 months inside.&quot;) [
+
+
+But getting back to the [[chickenwire]]...]
 
 
 </tw-passagedata><tw-passagedata pid="13" name="chickenwire" tags="" position="674,616" size="100,100">When you were little your mother put up chickenwire fencing to keep out the rattlesnakes that slithered into your backyard, but which could not keep out the wild coyotes. You have a visceral memory of running your hands along the chickenwire, one hand on either side of the fencing, hands clasped in prayer, sliding across from post to post, again and again. How the thin braids of metal interrupted the sticky connection of palm on palm, where love line meets love line, creating additional friction that bordered on burn.
@@ -411,30 +427,31 @@ Now with ever more reason to work things out, [[you plead]] with him for a fresh
 [[But all of his promises are dandelions in the wind.]] 
 
 
-(if:visits &gt;= 3)[[You&#39;ve been stuck in a loop for so long.]]</tw-passagedata><tw-passagedata pid="19" name="You expect to feel..." tags="" position="1208,487" size="100,100">Relief, maybe, or a sense of freedom?
+(if:visits &gt;= 3)[[You&#39;ve been stuck in a loop for so long.]]</tw-passagedata><tw-passagedata pid="19" name="You expect to feel..." tags="" position="1208,487" size="100,100">Relief, maybe, or a sense of freedom? (click-append: &quot;Relief, maybe, or a sense of freedom?&quot;) [
 
 
-So you would expect after two-and-a-half years of abuse drawn out through court proceedings and other forms of systemic abuse...
+So you would expect after two-and-a-half years of abuse drawn out through court proceedings and other forms of systemic abuse...] (click-append: &quot;systemic abuse...&quot;) [
 
 
-Instead you&#39;re a puddle after the rain.
+Instead you&#39;re a puddle after the rain.]
 
-&lt;img src=&quot;img/baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him, who deserves a life free from violence. 
+
+&lt;img src=&quot;img/baby.png&quot; alt=&quot;toddler looking into puddle&quot; /&gt;</tw-passagedata><tw-passagedata pid="20" name="You&#39;ve been stuck in a loop for so long." tags="" position="863,528" size="100,100">But now you are in hyper-drive, ready to fight for the sub-three kilo person who has total faith in your ability to nurture and protect him. (click-replace: &quot;has total faith in your ability to nurture and protect him&quot;) [deserves a life free from violence] (click-replace: &quot;free from violence.&quot;) [
 
 &lt;img src=&quot;img/baby1.png&quot; alt=&quot;mum and baby cuddling&quot; /&gt;
 
-You battle for your rights, reading the fine print. (click-append: &quot;fine print&quot;) [, demanding explanations] (click-append: &quot;demanding explanations&quot;) [, getting everything in writing] 
+You battle for your rights, reading the fine print.] (click-append: &quot;fine print&quot;) [, demanding explanations] (click-append: &quot;demanding explanations&quot;) [, getting everything in writing] 
 
 
-(t8n-delay: 5s) + (t8n: &quot;fade-down&quot;) [If you go with the flow...] (click-append: &quot;If you go with the flow&quot;) [ you risk being victimised by a system that was written by those with the privilege to write the rules] (click-replace: &quot;write the rules&quot;) [bend the rules and to sway the interpretation of those same rules against you.]
+(t8n-delay: 9s) + (t8n: &quot;fade-down&quot;) [If you go with the flow...] (click-append: &quot;If you go with the flow&quot;) [ you risk being victimised by a system that was written by those with the privilege to write the rules] (click-replace: &quot;write the rules&quot;) [bend the rules and to sway the interpretation of those same rules against you]
 
 
-Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to their advantage so that the justice system becomes another weapon in their arsenol. They become 
+(t8n-delay: 12s) + (t8n: &quot;fade-down&quot;) [Abusers] (t8n-delay: 14s) +(t8n: &quot;flicker&quot;) [twist] (stop:) (click-append: &quot;Abusers twist&quot;) [ the system to their advantage.] (click-append: &quot;to their advantage&quot;) [ so that the justice system becomes another weapon in their arsenol] (click-append: &quot;in their arsenol.&quot;) [ They become] (click-append: &quot;They become&quot;) [ 
 
 
 * the applicant in Family Court
 * the so-called injured party
-* the victim (click-append: &quot;the victim&quot;) [ (because it&#39;s easy to label a woman crazy when she&#39;s doing everything in her power to survive his [[campaign of terror]]).] </tw-passagedata><tw-passagedata pid="21" name="The Chickenwire Incident" tags="title-page" position="265,125" size="100,100">
+* the victim] (click-append: &quot;the victim&quot;) [ (because it&#39;s easy to label a woman crazy when she&#39;s doing everything in her power to survive his [[campaign of terror]]).] </tw-passagedata><tw-passagedata pid="21" name="The Chickenwire Incident" tags="title-page" position="265,125" size="100,100">
 
 
 [(enchant:?passage,(b4r:&quot;double&quot;)+(b4r-colour:white))&#39;&#39;[[THE CHICKENWIRE INCIDENT]]&#39;&#39;]
