--- a/index.html
+++ b/index.html
@@ -112,9 +112,14 @@ Next minute X is professing his undying love to Jade and calling her by your pet
 You&#39;re not jealous.] (click-append: &quot;You&#39;re not jealous&quot;) [ because his  disorientation is obvious] (click-append: &quot;obvious.&quot;) [ X is existing in an alternate reality, where every woman is a reflection of you.] (click-append: &quot;a reflection of you&quot;) [, and you are reflected in every woman&#39;s actions] (click-append: &quot;every woman&#39;s actions&quot;) [, lit up by multi-coloured strobing lights] (click-append: &quot;strobing lights.&quot;) [
 
 
+&lt;img src=&quot;img/tramp2.png&quot; alt=&quot;girls in a row at Tramp&quot; /&gt;
+
+
 You start to fear for your own safety.] (click-append: &quot;You start to fear for your own safety&quot;) [ (after all, he threatened to kill you if you ever left him for someone else)] (click-append: &quot;someone else).&quot;) [ In X&#39;s eyes you are every single woman who is making out with any man or woman on the dance floor.] (click-append: &quot;dance floor.&quot;) [ You&#39;re gyrating against hundreds of bodies all at once.] (click-append: &quot;all at once&quot;) [, texting scores of potential lovers] (click-append: &quot;potential lovers&quot;) [, your flesh multiplied and embodied by every pulsing body in the venue] (click-append: &quot;pulsing body in the venue.&quot;) [ You are the hyper-sexual adulteress of his nightmares in every reality.] (click-append: &quot;in every reality&quot;) [ except the one that you inhabit] (click-append: &quot;except the one that you inhabit.&quot;) [
 
-&lt;img src=&quot;img/tramp2.png&quot; alt=&quot;girls in a row at Tramp&quot; /&gt;
+
+&lt;img src=&quot;img/ohyea.png&quot; alt=&quot;a psychedelic reality&quot; /&gt;
+
 
 Why don&#39;t you [[go to the bathroom]] to take a break from this insane convergence of dimensions?]
 
@@ -216,19 +221,19 @@ Who else would rock up at her apartment on a Friday night to offer chickenwire i
 You call X, demanding that he explain himself.] (click-append: &quot;explain himself.&quot;) [
 
 
-He denies (click-replace: &quot;denies&quot;) [lies about] being at Jade&#39;s house.] (click-append: &quot;lies about being at Jade&#39;s house.&quot;) [
+He denies (click-replace: &quot;denies&quot;) [lies about] being at Jade&#39;s house.] (click-append: &quot;being at Jade&#39;s house.&quot;) [
 
 
 &lt;img src=&quot;img/rackgoldies.png&quot; alt=&quot;clothes for sale at Goldfingers&quot; /&gt;
 
 
-Later that night when you pack up your suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X showed up at the club, asking for you by name.] (click-append: &quot;asking for you by name.&quot;) [ Security described him as short and bald.] (click-replace: &quot;short and bald&quot;) [a creepy stalker] (click-append: &quot;creepy stalker.&quot;) [ To protect your privacy, the bouncer had told X you weren&#39;t there.] (click-append: &quot;you weren&#39;t there.&quot;) [ Now X is convinced that he&#39;s caught you in a lie.] (click-replace: &quot;he&#39;s caught you in a lie&quot;) [all his worst fears about you having an affair are true] (click-append: &quot;having an affair are true.&quot;) [
+Later that night when you pack up your suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X showed up at the club, asking for you by name.] (click-append: &quot;asking for you by name.&quot;) [ They said he was short and bald.] (click-replace: &quot;short and bald&quot;) [a creepy stalker] (click-append: &quot;creepy stalker.&quot;) [ To protect your privacy, the bouncer had told X you weren&#39;t there.] (click-append: &quot;you weren&#39;t there.&quot;) [ Now X is convinced that he&#39;s caught you in a lie.] (click-replace: &quot;he&#39;s caught you in a lie&quot;) [all his worst fears about you having an affair are true] (click-append: &quot;having an affair are true.&quot;) [
 
 
 &lt;img src=&quot;img/rackjen.png&quot; alt=&quot;clothes for sale&quot; /&gt;
 
 
-You confront X.] (click-append: &quot;You confront X&quot;) [ about spying on you at work] (click-append: &quot;spying on you at work.&quot;) [ Of course he denies (click-replace: &quot;denies&quot;) [lies about] checking up on your whereabouts.] (click-append: &quot;checking up on your whereabouts&quot;) [, although later he will confess to the chickenwire in therapy.] (click-append: &quot;confess to the chickenwire&quot;) [ and the stalking] (click-append: &quot;the stalking in therapy.&quot;) [
+You confront X.] (click-append: &quot;You confront X&quot;) [ about spying on you at work] (click-append: &quot;spying on you at work.&quot;) [ Of course he denies (click-replace: &quot;denies&quot;) [lies about] checking up on your whereabouts.] (click-append: &quot;checking up on your whereabouts&quot;) [, although later he will confess to the chickenwire in therapy] (click-append: &quot;confess to the chickenwire&quot;) [ and the stalking] (click-append: &quot;the stalking in therapy.&quot;) [
 
 [[The next day...]]]</tw-passagedata><tw-passagedata pid="8" name="The next day..." tags="" position="191,464" size="100,100">X doesn&#39;t want you to sell clothing at the clubs. (click-append: &quot;X doesn&#39;t want you to sell clothing at the clubs.&quot;) [ He phones you as you drive away with your bags packed for the night.] (click-append: &quot;He phones you as you drive away with your bags packed for the night.&quot;) [ You&#39;re beginning to feel suffocated.] (click-append: &quot;suffocated&quot;) [; you couldn&#39;t get out of the apartment quick enough] (click-append: &quot;quick enough.&quot;) [
 
@@ -253,13 +258,13 @@ You can always call RACV in between clubs so [[keep driving]]. ]</tw-passagedata
 What is the possibility that he tampered with the car to keep you at home?] (click-append: &quot;to keep you at home?&quot;) [
 
 
-If you weren&#39;t scared before, maybe you should be now.]
+If you weren&#39;t scared before, maybe you should be now.] (click-append: &quot;maybe you should be now.&quot;) [
 
 
 &lt;img src=&quot;img/gallery.png&quot; alt=&quot;off of King Street&quot; /&gt;
 
 
-You pull up to one of the clubs with a flat tire. (click-append: &quot;with a flat tire.&quot;) [
+You pull up to one of the clubs with a flat tire.] (click-append: &quot;with a flat tire.&quot;) [
 
 
 Two minutes later X parks his car behind yours on King Street, a cop car behind him.] (click-append: &quot;a cop car behind him.&quot;) [ You hadn&#39;t noticed X following you all the way to work.] (click-append: &quot;all the way to work.&quot;) [
@@ -271,36 +276,39 @@ The cops find X&#39;s pornography collection and a drug scale in his car.] (clic
 You wish the cops would arrest him.] (click-append: &quot;arrest him&quot;) [ even though the two of you are engaged to be married] (click-append: &quot;to be married.&quot;) [ The blinders have fallen away.] (click-append: &quot;fallen away&quot;) [, and you don&#39;t understand what you ever saw in him before] (click-replace: &quot;the cops would arrest him even though the two of you are engaged to be married. The blinders have fallen away, and you don&#39;t understand what you ever saw in him before.&quot;) [you could get away, but every dollar you have is tied up in your lingerie business, and you have nowhere to go.] (click-append: &quot;nowhere to go.&quot;) [ No family here.] (click-append: &quot;No family here.&quot;) [ No plan B.] (click-append: &quot;No plan B.&quot;) [ You&#39;re in Australia on a prospective marriage visa and if you quit now you&#39;ll be destitute.] (click-append: &quot;destitute&quot;) [ and homeless] (click-append: &quot;and homeless.&quot;) [ You&#39;re out of options.] (click-append: &quot;You&#39;re out of options.&quot;) [
 
 
-You must&#39;ve been blinded.] (click-append: &quot;blinded&quot;) [ by love, by sex pheromones, by drugs] (click-append: &quot;by drugs.&quot;) [
+You must&#39;ve been blinded.] (click-append: &quot;blinded&quot;) [ by love] (click-replace: &quot;by love&quot;) [by sex pheromones] (click-replace: &quot;by sex pheromones&quot;) [by drugs] (click-append: &quot;by drugs.&quot;) [
 
 
 The next day you insist that X see his doctor.] (click-append: &quot;see his doctor&quot;) [, who doubles his anti-psychotic medication] (click-append: &quot;anti-psychotic medication.&quot;) [
 
-You&#39;re hopeful that life will stabilise now.] (click-append: &quot;life will stabilise now.&quot;) [And it does. [[For two weeks.]]]</tw-passagedata><tw-passagedata pid="11" name="For two weeks." tags="" position="402,615" size="100,100">Nearly two weeks after the suspicious flat tire, you notice X driving past your apartment multiple times each day. (click-append: &quot;multiple times each day.&quot;) [ Although he&#39;s working across town, he pops in unexpectedly, supposedly for an iPad.] (click-replace: &quot;an iPad&quot;) [a phone charger] (click-replace: &quot;phone charger&quot;) [can of Coke] (click-append: &quot;a can of Coke.&quot;) [ It would almost be funny, how winded he is.] (click-append: &quot;how winded he is&quot;) [ after clearly racing up the four flights of stairs] (click-append: &quot;racing up the four flights of stairs&quot;) [, throwing open the front door without so much as a hello] (click-replace: &quot;hello&quot;) [text] (click-replace: &quot;text&quot;) [knock]  (click-append: &quot;without so much as a knock.&quot;) [
-
-
-Except that it&#39;s not funny because he&#39;s looking in every room for a stowaway.] (click-replace: &quot;a stowaway&quot;) [an imaginary lover] (click-replace: &quot;an imaginary lover&quot;) [an invisible cuckhold](click-append: &quot;an invisible cuckhold.&quot;) [
-
-
-And there is none to be found because there is no one else.] (click-append: &quot;there is no one else&quot;) [ and there never was]
+You&#39;re hopeful that life will stabilise now.] (click-append: &quot;life will stabilise now.&quot;) [ And it does. [[For two weeks.]]]</tw-passagedata><tw-passagedata pid="11" name="For two weeks." tags="" position="402,615" size="100,100">Nearly two weeks after the suspicious flat tire, you notice X driving past your apartment multiple times each day. (click-append: &quot;multiple times each day.&quot;) [ Although he&#39;s working across town, he pops in unexpectedly, supposedly for an iPad.] (click-replace: &quot;an iPad&quot;) [a phone charger] (click-replace: &quot;phone charger&quot;) [can of Coke] (click-append: &quot;a can of Coke.&quot;) [ It would almost be funny, how winded he is.] (click-append: &quot;how winded he is&quot;) [ after clearly racing up the four flights of stairs] (click-append: &quot;racing up the four flights of stairs&quot;) [, throwing open the front door without so much as a hello] (click-replace: &quot;hello&quot;) [text] (click-replace: &quot;text&quot;) [knock]  (click-append: &quot;without so much as a knock.&quot;) [
 
 
 &lt;img src=&quot;img/comp.png&quot; alt=&quot;girl using computer on bed&quot; /&gt;
 
 
-He leaves without a Coke. (click-append: &quot;without a Coke&quot;) [ because there was not a Coke in the fridge] (click-append: &quot;a Coke in the fridge&quot;) [ and it was never about refreshments anyway] (click-append: &quot;it was never about refreshments anyway.&quot;) [ 
+Except that it&#39;s not funny because he&#39;s looking in every room for a stowaway.] (click-replace: &quot;a stowaway&quot;) [an imaginary lover] (click-replace: &quot;an imaginary lover&quot;) [an invisible cuckhold](click-append: &quot;an invisible cuckhold.&quot;) [
+
+
+And there is none to be found because there is no one else.] (click-append: &quot;there is no one else&quot;) [ and there never was] (click-append: &quot;and there never was.&quot;) [
+
+
+He leaves without a Coke.] (click-append: &quot;without a Coke&quot;) [ because there was not a Coke in the fridge] (click-append: &quot;a Coke in the fridge&quot;) [ and it was never about refreshments anyway] (click-append: &quot;it was never about refreshments anyway.&quot;) [ 
 
 
 He&#39;s doubled his antipsychotic meds on his own accord.] (click-append: &quot;on his own accord&quot;) [, not under doctor&#39;s supervision] (click-append: &quot;under doctor&#39;s supervision.&quot;) [ 
 
 
-[[Peacetime is over.]]]
+[[Peacetime is over.]]
 
-&lt;img src=&quot;img/boxing.png&quot; alt=&quot;girl with punching bag&quot; /&gt;</tw-passagedata><tw-passagedata pid="12" name="Peacetime is over." tags="" position="539,615" size="100,100">All you want to do is get through each day, one day at a time, each day getting closer to your goals.
 
-&lt;img src=&quot;img/shop.png&quot; alt=&quot;secret shop&quot; /&gt;
+&lt;img src=&quot;img/boxing.png&quot; alt=&quot;girl with punching bag&quot; /&gt;]</tw-passagedata><tw-passagedata pid="12" name="Peacetime is over." tags="" position="539,615" size="100,100">All you want to do is get through each day, one day at a time, each day getting closer to your goals. (click-append: &quot;closer to your goals.&quot;) [
 
-You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [ and their friends] (click-replace: &quot;their friends&quot;) [their kids] to come over to shop any time of night. (click-replace: &quot;night&quot;) [day] (click-append: &quot;any time of day.&quot;) [ 
+
+&lt;img src=&quot;img/secretshop.png&quot; alt=&quot;secret shop&quot; /&gt;
+
+
+You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [ and their friends] (click-replace: &quot;their friends&quot;) [their kids] to come over to shop any time of night (click-replace: &quot;night&quot;) [day] to shop.] (click-append: &quot;to shop.&quot;) [ 
 
 
 First, you&#39;ll pay your debts, then you&#39;ll buy yourself options.] (click-replace: &quot;options&quot;) [freedom] (click-append: &quot;buy yourself freedom.&quot;) [
@@ -490,10 +498,10 @@ Your life bleeds into theirs: their customers pay for your product; their custom
 Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind cycle&quot;) [expensive and sometimes debt-inducing lifestyle] and your world is about to change.] (click-append: &quot;about to change.&quot;) [ Things had already begun to turn upside-down, but now other people are being sucked into the hellish vortex that is your life.] (click-append: &quot;hellish vortex that is your life.&quot;) [ A certain incubus picks you as an easy target.] (click-replace: &quot;an easy target&quot;) [his mark] (click-replace: &quot; his mark&quot;) [ his source of narcissistic supply] (click-append: &quot;source of narcissistic supply.&quot;) [ He&#39;s in the process of draining the light out of your life.] (click-append: &quot;light out of your life.&quot;) [
 
 
-&lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;
+&lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;]
 
 
-Your phone is still ringing. Do you [[slide right to answer]] or [[ignore it]]?]</tw-passagedata></tw-storydata>
+Your phone is still ringing. Do you [[slide right to answer]] or [[ignore it]]?</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
